--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
 
 
-<h1 id="test">TEST</h1>
+<h1 id="lyem-ningthous-180-site">Lyem Ningthou&rsquo;s 180 Site</h1>
 
 
 <ul>
@@ -30,7 +30,7 @@
   
   <li>
     <span class="date">0001/01/01</span>
-    <a href="/post/test/">Project 0</a>
+    <a href="/post/project0/">Project 0</a>
   </li>
   
 </ul>
